public/css/room.css
.main_room {
    height: 100vh;
    display: flex;
    background-color: #000;
    z-index: 0;
    overflow: hidden;
}

.video_guest {
    display: block; 
    object-fit: cover;  /* no letterboxing */
    position: absolute;
    transition: opacity 1s;
    width: 100%;
    height: 100%;
    opacity: 1;
    z-index: 1;
} 

.video_guest.deactive {
    opacity: 0;
    z-index: 1; 
}

.video_local {
    display: block; 
    object-fit: cover;  
    position: absolute;
    transition: opacity 1s;
    width: 100%;
    height: 100%;
    opacity: 0;
    z-index: 1;
} 

/* Switch video from full screen to mini-video */
.video_local.mini_video {
    border-radius: var(--sl-border-radius-x-large); 
    border: 1px solid gray;
    top: 20px;
    right: 20px;
    box-shadow: 0 0 10px 0 #bdbdbd;
    max-height: 30%;
    max-width: 30%;
    position: absolute;
    transition: opacity 2s;
    opacity: 0;  /* hide the mini-video when not active */
}

/* Activate fullscreen video/mini-video */
.video_local.active, .video_local.mini_video.active {
    opacity: 1;
    z-index: 2;
}

video {
    -moz-transform: scale(-1, 1);
    -ms-transform: scale(-1, 1);
    -o-transform: scale(-1, 1);
    -webkit-transform: scale(-1, 1);
    transform: scale(-1, 1);
}

footer {
    background-color: rgba(0,0,0,0.6);
    width: 100%;
    height: 10vh;
    position: fixed;
    bottom: 0;
}
sl-button {
    padding: 1%;
    z-index: 3;
}

#call_end {
    color: black;
}

#videocam {
    color: blue;
}

#mic {
    color: black;
}

.video-overlays {
    position: relative; 
    z-index: 4;
}

/* message box */
.card {
    position: fixed;
    bottom: 11vh;
    left: 1vh;
    /* right: 1vh; */
    max-width: 500px;
    height: 88vh;
    border-radius: 15px !important;
    background-color: rgba(0,0,0,0.4) !important;
}

.msg_card_body {
    overflow-y: auto;
}

.form-control {
    border:0 !important;
    border-radius: 15px 0px 0px 15px !important;
    color: whitesmoke !important;
    background-color: rgba(0,0,0,0.6) !important;
    overflow-y: auto;
}

.form-control:focus {
    box-shadow:none !important;
    outline:0px !important;
}

.send_btn {
    border-radius: 0 15px 15px 0 !important;
    background-color: rgba(0,0,0,0.6) !important;
    border:0 !important;
    color: red !important;
    cursor: pointer;
}

img {
    height: 40px;
    width: 40px;
}

.msg_container {
    position: relative;
    border-radius: 25px 25px 25px 5px;
    background-color: lightskyblue; 
    padding: 10px;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 10px;
}

.msg_container_send {
    position: relative;
    border-radius: 25px 25px 5px 25px;
    background-color: lightgreen;
    padding: 10px;
    margin-top: auto;
    margin-bottom: auto;
    margin-right: 10px;
}

.msg_container_announcement {
    position: relative;
    border-radius: 25px;
    background-color: rgba(255,255,255,0.5);
    padding: 10px;
    font-size: small;
    margin-top: auto;
    margin-bottom: auto;
}

.msg_time {
    left: 0;
    position: absolute;
    bottom: -15px;
    color: rgba(255,255,255,0.5);
    font-size: 10px;
}

.msg_time_send {
    right: 0;
    position: absolute;
    bottom: -15px;
    color: rgba(255,255,255,0.5);
    font-size: 10px;
}

.msg_time_announcement {
    position: absolute;
    display: flex;
    justify-content: center;
    width: 100%;
    bottom: -15px;
    color: rgba(255,255,255,0.5);
    font-size: 10px;
}

/* scrollbar */
.scrollbar-deep-blue::-webkit-scrollbar-track {
    /* background-color: #F5F5F5; */
    border-radius: 10px; 
}

.scrollbar-deep-blue::-webkit-scrollbar {
    width: 12px;
}

.scrollbar-deep-blue::-webkit-scrollbar-thumb {
    border-radius: 10px;
    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1); */
    background-image: -webkit-linear-gradient(330deg, #e0c3fc 0%, #8ec5fc 100%);
    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); 
}

.scrollbar-deep-blue {
    scrollbar-color: #8ec5fc #F5F5F5;
}

